<resources>
    <string name="app_name">Rainbow Relaxation</string>
    <string name="prefs">Preferences</string>
    <string name="speed_dialog_title">Settings</string>
    <string name="speed">Speed</string>
    <string name="steps">Steps</string>
    <string name="close">Close</string>
    <string name="timerEnableCheckbox">Enable Timer</string>
    <string name="default_time">20:00</string>
    <string name="brightnessLabel">Brightness</string>
</resources>
